fix: don't print messages in exported games.

--- a/addons/gg_print/plugin.cfg
+++ b/addons/gg_print/plugin.cfg
@@ -1,7 +1,7 @@
 [plugin]
 
-name="gg_print"
-description="Provides a gg.print() that let's you click through to the source code."
+name="gg.print() editor integration"
+description="Provides a gg.print() method to create log messages that let you click through to the source code."
 author="graydoubt"
-version="0.1.0"
+version="0.1.1"
 script="plugin.gd"
